сделал адаптивным принцип работы

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
         </div>
       </section>
 
-      <!-- Преимущества -->
+      <!-- Как это работает -->
       <section class="work-principle">
         <div class="work-principle__wrapper container">
           <h2 class="work-principle__title title">Как это работает</h2>
