--- a/src/index.html
+++ b/src/index.html
@@ -158,12 +158,13 @@
       <section class="example">
         <div class="example__wrapper container">
           <h2 class="example__title title">Живой пример</h2>
-          <p class="example__description">
+          <p class="example__text">
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
             Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
             этом он не менял своих привычек и по-прежнему спит по 16 часов в
             день.
           </p>
+
           <dl class="example__list">
             <div class="example__item">
               <dt class="example__heading">5 кг</dt>
