Сделал адаптивным локацию

--- a/src/index.html
+++ b/src/index.html
@@ -199,7 +199,7 @@
       </section>
 
       <!-- Локация -->
-      <section class="location">
+      <section class="location location">
         <div class="location__wrapper container">
           <div class="location__address-wrapper">
             <h2 class="location__address-wrapper-title">
@@ -213,7 +213,15 @@
             </address>
           </div>
           <!-- здесь будет карта -->
-          <div class="location__map map"></div>
+          <div class="location__map map">
+            <img
+              class="map__image"
+              src="./img/map-mobile.png"
+              width="320"
+              height="362"
+              alt="карта"
+            />
+          </div>
         </div>
       </section>
     </main>
