--- a/src/form.html
+++ b/src/form.html
@@ -70,124 +70,109 @@
             <p class="program-selection__text">
               Заполните анкету, и мы подберем программу питания для вашего кота
             </p>
-            <div
-              class="program-selection__information-container information-container"
+            <fieldset
+              class="program-selection__fields-container fields-container fields-container--information"
             >
-              <p
-                class="program-selection__field-content field-content field-content--name"
-              >
-                <label class="field-content__field-label"
-                  >Имя:*
-                  <input
-                    class="field-content__field-input field-input"
-                    name="name"
-                    placeholder="Барсик"
-                    required
-                  />
-                </label>
-              </p>
-              <p
-                class="program-selection__field-content field-content field-content--weight"
-              >
-                <label class="field-content__field-label"
-                  >Вес (кг):*
-                  <input
-                    class="field-content__field-input field-input"
-                    name="weight"
-                    placeholder="7"
-                    required
-                  />
-                </label>
-              </p>
-              <p
-                class="program-selection__field-content field-content field-content--age"
-              >
-                <label class="field-content__field-label"
-                  >Возраст (лет):
-                  <input
-                    class="field-content__field-input field-input"
-                    name="age"
-                    placeholder="7"
-                    required
-                  />
-                </label>
-              </p>
-            </div>
-            <div
-              class="program-selection__program-types-container program-types-container"
-            >
-              <label class="program-selection__field-label field-label">
+              <legend class="visually-hidden">Инфомация кота</legend>
+              <label class="field-сontainer__label"
+                >Имя:*
                 <input
-                  class="program-selection__field-input"
+                  class="field-container__field-input field-input"
+                  name="Имя"
+                  placeholder="Барсик"
+                  required
+                />
+              </label>
+              <label class="field-сontainer__label"
+                >Вес (кг):*
+                <input
+                  class="field-container__field-input field-input"
+                  name="Вес"
+                  placeholder="7"
+                  required
+                />
+              </label>
+              <label class="field-сontainer__label"
+                >Возраст (лет):
+                <input
+                  class="field-container__field-input field-input"
+                  name="Возраст"
+                  placeholder="7"
+                  required
+                />
+              </label>
+            </fieldset>
+
+            <fieldset
+              class="program-selection__fields-container fields-container fields-container--program"
+            >
+              <legend class="visually-hidden">Выберите программу</legend>
+              <label class="field-сontainer__label">
+                <input
+                  class="field-container__field-input field-input"
                   type="radio"
-                  name="program"
+                  name="Программа"
                   value="weight-loss"
                   required
+                  checked
                 />
                 Похудение
               </label>
-              <label class="program-selection__field-label field-label">
+              <label class="field-сontainer__label">
                 <input
-                  class="program-selection__field-input"
+                  class="field-container__field-input field-input"
                   type="radio"
-                  name="program"
+                  name="Программа"
                   name="weight-gain"
                   required
                 />
                 Набор массы
               </label>
-              <label class="program-selection__field-label field-label">
+              <label class="field-сontainer__label">
                 <input
-                  class="program-selection__field-input"
+                  class="field-container__field-input field-input"
                   type="radio"
-                  name="program"
+                  name="Программа"
                   value="your-advice"
                   required
                 />
                 Не знаю (Нужен ваш совет)
               </label>
-            </div>
+            </fieldset>
           </div>
         </section>
 
         <!-- Контактные данные -->
         <section class="contact-details">
-          <div class="contact-details__wrapper">
+          <div class="contact-details__wrapper container">
             <h2 class="contact-details__title title title--medium">
               Контактные данные (владельца кота)
             </h2>
-            <div
-              class="contanct-details__information-container information-container"
+            <fieldset
+              class="program-selection__fields-container fields-container fields-container--contacts"
             >
-              <p
-                class="contact-details__field-content field-content field-content--email"
-              >
-                <label class="field-content__field-label"
-                  >E-mail:*
-                  <input
-                    class="field-content__field-input field-input"
-                    type="email"
-                    name="email"
-                    placeholder="kuklachev@gmail.com"
-                    required
-                  />
-                </label>
-              </p>
-              <p
-                class="contact-details__field-content field-content field-content--phone"
-              >
-                <label class="field-content__field-label"
-                  >Телефон:*
-                  <input
-                    class="field-content__field-input field-input"
-                    type="tel"
-                    name="phone"
-                    placeholder="8 (960) 900-60-90"
-                    required
-                  />
-                </label>
-              </p>
-            </div>
+              <legend class="visually-hidden">Вводите данные</legend>
+              <label class="field-content__field-label"
+                >E-mail:*
+                <input
+                  class="field-content__field-input field-input"
+                  type="email"
+                  name="email"
+                  placeholder="kuklachev@gmail.com"
+                  required
+                />
+              </label>
+              <label class="field-content__field-label"
+                >Телефон:*
+                <input
+                  class="field-content__field-input field-input"
+                  type="tel"
+                  name="phone"
+                  placeholder="8 (960) 900-60-90"
+                  required
+                />
+              </label>
+            </fieldset>
           </div>
         </section>
 
