--- a/src/form.html
+++ b/src/form.html
@@ -183,7 +183,7 @@
             <label class="comment__field-label">
               <textarea
                 class="comment__textarea textarea"
-                cols="30d"
+                cols="36"
                 rows="8"
                 placeholder="Расскажите обо всех повадках кота"
                 required
