Сделал адаптивным локацию

--- a/src/form.html
+++ b/src/form.html
@@ -256,7 +256,9 @@
       <!-- Локация -->
       <section class="location">
         <div class="location__wrapper container">
-          <div class="location__address-wrapper">
+          <div
+            class="location__address-wrapper location-address-wrapper location-address-wrapper--grey"
+          >
             <h2 class="location__address-wrapper-title">
               приглашаем к сотрудничеству дилеров!
             </h2>
@@ -268,7 +270,15 @@
             </address>
           </div>
           <!-- здесь будет карта -->
-          <div class="location__map map"></div>
+          <div class="location__map map">
+            <img
+              class="map__image"
+              src="./img/map-mobile.png"
+              width="320"
+              height="362"
+              alt="карта"
+            />
+          </div>
         </div>
       </section>
     </main>
