--- a/src/index.html
+++ b/src/index.html
@@ -201,7 +201,7 @@
       <!-- Локация -->
       <section class="location location">
         <div class="location__wrapper container">
-          <div class="location__address-wrapper">
+          <div class="location__address-wrapper location-address-wrapper">
             <h2 class="location__address-wrapper-title">
               приглашаем к сотрудничеству дилеров!
             </h2>
