Добавил иконку в index.html и form.html

--- a/src/form.html
+++ b/src/form.html
@@ -287,10 +287,10 @@
     <footer class="main-footer">
       <div class="main-footer__wrapper container">
         <!-- логотип кэт энереджи -->
-        <div class="main-footer__logo logo-cat-energy">
-          <a class="logo-cat-energy__image" href="index.html">
+        <div class="main-footer__logo logo">
+          <a class="logo__image" href="index.html">
             <img
-              src="./img/logo-cat-energy-name-mobile.svg"
+              src="./img/cat-energy-text-mobile.svg"
               width="128"
               height="24"
               alt="Кэт энерджи"
@@ -300,7 +300,7 @@
 
         <!-- соц. сети -->
         <div class="main-footer__social social">
-          <ul class="social-list">
+          <ul class="social__list">
             <li class="social__item">
               <a
                 class="social__link social__link--vkontakte"
