--- a/src/catalog.html
+++ b/src/catalog.html
@@ -294,64 +294,72 @@
           <h2 class="additional-product__title title title--medium">
             Дополнительные товары
           </h2>
-          <ul class="additional-product__list additional-product-list">
-            <li class="additional-product-list__item">
-              <h3 class="additional-product-list__title">Сахарозаменитель</h3>
-              <div class="additional-product__amount">
-                <span class="additional-product__amount-package"
-                  >1 упаковка (100 г)</span
-                >
-                <span class="additional-product__amount-price">200 ₽</span>
+          <div class="additional-product__content-wrapper">
+            <ul class="additional-product__list additional-product-list">
+              <li class="additional-product-list__item">
+                <h3 class="additional-product-list__title">Сахарозаменитель</h3>
+                <div class="additional-product__amount">
+                  <span class="additional-product__amount-package"
+                    >1 упаковка (100 г)</span
+                  >
+                  <span class="additional-product__amount-price">200 ₽</span>
+                </div>
                 <a
                   class="additional-product__button button button--primary"
                   href="#"
                   >Заказать</a
                 >
-              </div>
-            </li>
-            <li class="additional-product-list__item">
-              <h3 class="additional-product-list__title">Питьевая вода</h3>
-              <div class="additional-product__amount">
-                <span class="additional-product__amount-package">5 литров</span>
-                <span class="additional-product__amount-price">50 ₽</span>
+              </li>
+              <li class="additional-product-list__item">
+                <h3 class="additional-product-list__title">Питьевая вода</h3>
+                <div class="additional-product__amount">
+                  <span class="additional-product__amount-package"
+                    >5 литров</span
+                  >
+                  <span class="additional-product__amount-price">50 ₽</span>
+                </div>
                 <a
                   class="additional-product__button button button--primary"
                   href="#"
                   >Заказать</a
                 >
-              </div>
-            </li>
-            <li class="additional-product-list__item">
-              <h3 class="additional-product-list__title">Молоко</h3>
-              <div class="additional-product__amount">
-                <span class="additional-product__amount-package">1 литр</span>
-                <span class="additional-product__amount-price">100 ₽</span>
+              </li>
+              <li class="additional-product-list__item">
+                <h3 class="additional-product-list__title">Молоко</h3>
+                <div class="additional-product__amount">
+                  <span class="additional-product__amount-package">1 литр</span>
+                  <span class="additional-product__amount-price">100 ₽</span>
+                </div>
                 <a
                   class="additional-product__button button button--primary"
                   href="#"
                   >Заказать</a
                 >
-              </div>
-            </li>
-            <li class="additional-product-list__item">
-              <h3 class="additional-product-list__title">Витамины</h3>
-              <div class="additional-product__amount">
-                <span class="additional-product__amount-package"
-                  >1 упаковка (30 г)</span
-                >
-                <span class="additional-product__amount-price">300 ₽</span>
+              </li>
+              <li class="additional-product-list__item">
+                <h3 class="additional-product-list__title">Витамины</h3>
+                <div class="additional-product__amount">
+                  <span class="additional-product__amount-package"
+                    >1 упаковка (30 г)</span
+                  >
+                  <span class="additional-product__amount-price">300 ₽</span>
+                </div>
                 <a
                   class="additional-product__button button button--primary"
                   href="#"
                   >Заказать</a
                 >
-              </div>
-            </li>
-          </ul>
-          <div class="additional-product__gift gift">
-            <p class="additional-product__gift-text">
-              Закажите все и получите чехол для кота в подарок!
-            </p>
+              </li>
+            </ul>
+            <div class="additional-product__gift gift">
+              <img
+                class="gift__image"
+                src="./img/gift-image-mobile.jpg"
+                widtt="280"
+                height="290"
+                alt="Подарок"
+              />
+            </div>
           </div>
         </div>
       </section>
