--- a/src/catalog.html
+++ b/src/catalog.html
@@ -365,9 +365,11 @@
       </section>
 
       <!-- Локация -->
-      <section class="location">
+      <section class="location location">
         <div class="location__wrapper container">
-          <div class="location__address-wrapper">
+          <div
+            class="location__address-wrapper location-address-wrapper location-address-wrapper--grey"
+          >
             <h2 class="location__address-wrapper-title">
               приглашаем к сотрудничеству дилеров!
             </h2>
@@ -379,7 +381,15 @@
             </address>
           </div>
           <!-- здесь будет карта -->
-          <div class="location__map map"></div>
+          <div class="location__map map">
+            <img
+              class="map__image"
+              src="./img/map-mobile.png"
+              width="320"
+              height="362"
+              alt="карта"
+            />
+          </div>
         </div>
       </section>
     </main>
@@ -391,7 +401,7 @@
         <div class="main-footer__logo logo">
           <a class="logo__image" href="index.html">
             <img
-              src="./img/logo-cat-energy-name-mobile.svg"
+              src="./img/cat-energy-text-mobile.svg"
               width="128"
               height="24"
               alt="Кэт энерджи"
