Добавил обертку в в пример в index.html

--- a/src/index.html
+++ b/src/index.html
@@ -157,27 +157,29 @@
       <!-- Живой пример -->
       <section class="example">
         <div class="example__wrapper container">
-          <h2 class="example__title title">Живой пример</h2>
-          <p class="example__text">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
-            Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
-            этом он не менял своих привычек и по-прежнему спит по 16 часов в
-            день.
-          </p>
+          <div class="example__description-container">
+            <h2 class="example__title title">Живой пример</h2>
+            <p class="example__text">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм
+              на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
+              При этом он не менял своих привычек и по-прежнему спит по 16 часов
+              в день.
+            </p>
 
-          <dl class="example__list">
-            <div class="example__item">
-              <dt class="example__heading">5 кг</dt>
-              <dd class="example__description">снижение веса</dd>
+            <dl class="example__list">
+              <div class="example__item">
+                <dt class="example__heading">5 кг</dt>
+                <dd class="example__description">снижение веса</dd>
+              </div>
+              <div class="example__item">
+                <dt class="example__heading">60 дней</dt>
+                <dd class="example__description">затрачено времени</dd>
+              </div>
+            </dl>
+            <div class="example__result">
+              <p class="example__expenses">Затраты на питание:</p>
+              <div class="example__price">15 000 руб.</div>
             </div>
-            <div class="example__item">
-              <dt class="example__heading">60 дней</dt>
-              <dd class="example__description">затрачено времени</dd>
-            </div>
-          </dl>
-          <div class="example__result">
-            <p class="example__expenses">Затраты на питание:</p>
-            <div class="example__price">15 000 руб.</div>
           </div>
           <div class="example__cat cat-result">
             <img
