--- a/src/form.html
+++ b/src/form.html
@@ -11,7 +11,7 @@
     <header class="main-header">
       <div class="main-header__wrapper container">
         <div class="main-header__container-nav">
-          <a class="main-header__icon-logo" href="#">
+          <a class="main-header__icon-logo" href="index.html">
             <img
               src="./img/cat-energy-icon-mobile.svg"
               width="33"
