--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           </div>
 
           <!-- Навигация -->
-          <nav class="main-nav">
+          <nav class="main-nav main-nav--closed">
             <button class="main-nav__toggle" type="button">
               <span class="visually-hidden"> Открыть меню </span>
             </button>
