Добавил файл js, чтобы при нажатии на кнопку появлялось меню

--- a/src/form.html
+++ b/src/form.html
@@ -29,7 +29,7 @@
           </div>
 
           <!-- Навигация -->
-          <nav class="main-nav">
+          <nav class="main-nav main-nav--closed main-nav--nojs">
             <button class="main-nav__toggle" type="button">
               <span class="visually-hidden"> Открыть меню </span>
             </button>
@@ -340,5 +340,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
