--- a/src/catalog.html
+++ b/src/catalog.html
@@ -29,7 +29,7 @@
           </div>
 
           <!-- Навигация -->
-          <nav class="main-nav">
+          <nav class="main-nav main-nav--closed main-nav--nojs">
             <button class="main-nav__toggle" type="button">
               <span class="visually-hidden"> Открыть меню </span>
             </button>
@@ -451,5 +451,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
