Изменил насыщенность шрифов oswald, добавил новые переменные, стилизовал программу для 3 разрешений

--- a/src/form.html
+++ b/src/form.html
@@ -29,14 +29,14 @@
           </div>
 
           <!-- Навигация -->
-          <nav class="main-nav">
+          <nav class="main-nav main-nav--closed main-nav--nojs">
             <button class="main-nav__toggle" type="button">
               <span class="visually-hidden"> Открыть меню </span>
             </button>
 
             <div class="main-nav__wrapper">
               <ul class="main-nav__list site-list">
-                <li class="site-list__item site__item--current">
+                <li class="site-list__item site__item">
                   <a class="site-list__link" href="index.html">Главная</a>
                 </li>
                 <li class="site-list__item">
@@ -44,7 +44,9 @@
                     >Каталог продукции</a
                   >
                 </li>
-                <li class="site-list__item">
+                <li
+                  class="site-list__item site-list__item site-list__item--active"
+                >
                   <a class="site-list__link" href="form.html"
                     >Подбор программы</a
                   >
@@ -340,5 +342,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
