--- a/src/catalog.html
+++ b/src/catalog.html
@@ -29,17 +29,19 @@
           </div>
 
           <!-- Навигация -->
-          <nav class="main-nav">
+          <nav class="main-nav main-nav--closed main-nav--nojs">
             <button class="main-nav__toggle" type="button">
               <span class="visually-hidden"> Открыть меню </span>
             </button>
 
             <div class="main-nav__wrapper">
               <ul class="main-nav__list site-list">
-                <li class="site-list__item site__item--current">
+                <li class="site-list__item site__item">
                   <a class="site-list__link" href="index.html">Главная</a>
                 </li>
-                <li class="site-list__item">
+                <li
+                  class="site-list__item site-list__item site-list__item--active"
+                >
                   <a class="site-list__link" href="catalog.html"
                     >Каталог продукции</a
                   >
@@ -451,5 +453,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
