Добавил состояние кнопке в программе, добвил внешние отступы двум блокам выбор программы

--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
         <div class="program-types__wrapper container">
           <h2 class="visually-hidden">Виды программ</h2>
           <div
-            class="program-types__type program-type program-type--weight-loss"
+            class="program-types__type program-type program-types__type--weight-loss program-type--weight-loss"
           >
             <h2 class="program-type__title title">Похудение</h2>
             <p class="program-type__description description">
@@ -109,7 +109,7 @@
           </div>
 
           <div
-            class="program-types__type program-type program-type--weight-gain"
+            class="program-types__type program-type program-type--weight-gain program-types__type--weight-gain"
           >
             <h2 class="program-type__title title">Набор массы</h2>
             <p class="program-type__description description">
