Стилизовал виды програм, 2 блока программы для мобильной, планшетной и десктопной версии, добавил состояние кнопке

--- a/src/index.html
+++ b/src/index.html
@@ -99,24 +99,102 @@
           <div
             class="program-types__type program-type program-types__type--weight-loss program-type--weight-loss"
           >
-            <h2 class="program-type__title title">Похудение</h2>
-            <p class="program-type__description description">
-              Ваш кот весит больше собаки и почти утратил способность лазить по
-              деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
-              сбросить лишний вес.
-            </p>
-            <a class="program-type__link" href="#">каталог slim</a>
+            <div class="program-type__content">
+              <div class="program-type__wrapper-name">
+                <div
+                  class="program-type__icon program-type__icon--weight-loss"
+                ></div>
+                <h2 class="program-type__title title title--small">
+                  Похудение
+                </h2>
+              </div>
+              <p
+                class="program-type__description description description--small"
+              >
+                Ваш кот весит больше собаки и почти утратил способность лазить
+                по деревьям? Пора на диету! Cat Energy Slim поможет вашему
+                питомцу сбросить лишний вес.
+              </p>
+              <a class="program-type__link button" href="#"
+                ><span class="program-type__link-text">каталог slim</span>
+                <svg
+                  class="program-type__link-icon"
+                  width="32"
+                  height="12"
+                  viewBox="0 0 32 12"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g id="icon_arrow">
+                    <g id="icon">
+                      <line
+                        id="Line 1"
+                        y1="6"
+                        x2="18"
+                        y2="6"
+                        stroke="black"
+                        stroke-width="2"
+                      />
+                      <path
+                        id="Polygon 1"
+                        d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z"
+                        fill="black"
+                      />
+                    </g>
+                  </g>
+                </svg>
+              </a>
+            </div>
           </div>
 
           <div
             class="program-types__type program-type program-type--weight-gain program-types__type--weight-gain"
           >
-            <h2 class="program-type__title title">Набор массы</h2>
-            <p class="program-type__description description">
-              Заработать авторитет среди дворовых котов и даже собак? Серия Cat
-              Energy Pro поможет вашему коту нарастить необходимые мышцы!
-            </p>
-            <a class="program-type__link" href="#">каталог pro</a>
+            <div class="program-type__content">
+              <div class="program-type__wrapper-name">
+                <div
+                  class="program-type__icon program-type__icon--weight-gain"
+                ></div>
+                <h2 class="program-type__title title title--small">
+                  Набор массы
+                </h2>
+              </div>
+              <p
+                class="program-type__description description description--small"
+              >
+                Заработать авторитет среди дворовых котов и даже собак? Серия
+                Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+              </p>
+              <a class="program-type__link button" href="#"
+                ><span class="program-type__link-text">каталог pro</span>
+                <svg
+                  class="program-type__link-icon"
+                  width="32"
+                  height="12"
+                  viewBox="0 0 32 12"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g id="icon_arrow">
+                    <g id="icon">
+                      <line
+                        id="Line 1"
+                        y1="6"
+                        x2="18"
+                        y2="6"
+                        stroke="black"
+                        stroke-width="2"
+                      />
+                      <path
+                        id="Polygon 1"
+                        d="M24 6L17.25 11.1962L17.25 0.803848L24 6Z"
+                        fill="black"
+                      />
+                    </g>
+                  </g>
+                </svg>
+              </a>
+            </div>
           </div>
         </div>
       </section>
