Задал нижний отступ виды программ, закончил стилизацию виды програм

--- a/src/index.html
+++ b/src/index.html
@@ -101,9 +101,15 @@
           >
             <div class="program-type__content">
               <div class="program-type__wrapper-name">
-                <div
-                  class="program-type__icon program-type__icon--weight-loss"
-                ></div>
+                <div class="program-type__icon program-type__icon--weight-loss">
+                  <img
+                    class="program-type__icon-image"
+                    src="./img/cat-slim-mobile.svg"
+                    width="36"
+                    height="50"
+                    alt="программа похудение кота"
+                  />
+                </div>
                 <h2 class="program-type__title title title--small">
                   Похудение
                 </h2>
@@ -152,9 +158,15 @@
           >
             <div class="program-type__content">
               <div class="program-type__wrapper-name">
-                <div
-                  class="program-type__icon program-type__icon--weight-gain"
-                ></div>
+                <div class="program-type__icon program-type__icon--weight-gain">
+                  <img
+                    class="program-type__icon-image"
+                    src="./img/cat-pro-mobile.svg"
+                    width="67"
+                    height="28"
+                    alt="программа набор массы кота"
+                  />
+                </div>
                 <h2 class="program-type__title title title--small">
                   Набор массы
                 </h2>
