Стилизовал блок "Как это работает" для всех состояний

--- a/src/index.html
+++ b/src/index.html
@@ -214,13 +214,32 @@
       <!-- Как это работает -->
       <section class="work-principle">
         <div class="work-principle__wrapper container">
-          <h2 class="work-principle__title title">Как это работает</h2>
+          <h2 class="work-principle__title title title--medium">
+            Как это работает
+          </h2>
           <ul class="work-principle__list work-principle-list">
             <li class="work-principle-list__item">
               <div
                 class="work-principle-list__icon-container work-principle-list__icon-container--leaf"
-              ></div>
-              <p class="work-principle-list__description description">
+              >
+                <svg
+                  class="work-principle-list__icon"
+                  width="26"
+                  height="28"
+                  viewBox="0 0 26 28"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    id="Vector"
+                    d="M25.3438 0.767C25.2434 0.317 24.8647 0 24.4325 0C24.4306 0 24.4288 0 24.4269 0C19.4891 0.033 7.48156 0.916 2.63375 8.38C0.115624 12.258 -0.100938 17.293 1.98969 23.345C2.00562 23.392 2.03844 23.424 2.06 23.467C1.31281 25.44 1.02312 26.753 1.01562 26.79C0.906875 27.33 1.23031 27.862 1.73656 27.978C1.80219 27.993 1.86781 28 1.93344 28C2.36562 28 2.75469 27.679 2.84937 27.21C2.86906 27.108 5.25781 16.837 13.7028 10.832C14.1341 10.526 14.2503 9.905 13.9625 9.445C13.6747 8.985 13.0934 8.86 12.6622 9.168C7.87344 12.573 4.92406 17.176 3.18969 20.824C1.94844 16.246 2.27375 12.447 4.17594 9.519C7.91937 3.755 16.7984 2.365 22.1581 2.071C21.005 3.872 19.745 7.174 19.745 13C19.745 16.12 18.9153 18.522 17.2803 20.14C14.6591 22.731 10.4009 22.974 7.28656 22.724C6.76906 22.679 6.32 23.095 6.28062 23.646C6.24125 24.196 6.62844 24.676 7.14406 24.718C7.7675 24.769 8.43313 24.8 9.125 24.8C12.2956 24.8 15.9941 24.137 18.5544 21.606C20.5888 19.595 21.62 16.7 21.62 13.001C21.62 3.902 24.8356 1.905 24.8516 1.896C25.2416 1.687 25.4459 1.219 25.3438 0.767Z"
+                    fill="white"
+                  />
+                </svg>
+              </div>
+              <p
+                class="work-principle-list__description description description--small"
+              >
                 Функциональное питание содержит только полезные питательные
                 вещества.
               </p>
@@ -229,7 +248,9 @@
               <div
                 class="work-principle-list__icon-container work-principle-list__icon-container--powder"
               ></div>
-              <p class="work-principle-list__description description">
+              <p
+                class="work-principle-list__description description description--small"
+              >
                 Выпускается в виде порошка, который нужно лишь залить кипятком и
                 готово.
               </p>
@@ -237,8 +258,49 @@
             <li class="work-principle-list__item">
               <div
                 class="work-principle-list__icon-container work-principle-list__icon-container--cutlery"
-              ></div>
-              <p class="work-principle-list__description description">
+              >
+                <svg
+                  class="work-principle-list__icon"
+                  width="25"
+                  height="30"
+                  viewBox="0 0 25 30"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g id="icon_eat">
+                    <path
+                      id="Knife"
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M18.6173 0.0761497C18.991 -0.0786313 19.4211 0.00692445 19.7071 0.292922C20.6156 1.20142 21.8038 3.17065 22.7659 6.21082C23.7373 9.28039 24.5 13.5081 24.5 19C24.5 19.5523 24.0523 20 23.5 20H20V29C20 29.5523 19.5523 30 19 30C18.4477 30 18 29.5523 18 29V1.00003C18 0.595567 18.2436 0.230931 18.6173 0.0761497ZM20 18H22.4912C22.4053 13.1836 21.7051 9.48755 20.8591 6.81424C20.5807 5.93457 20.2885 5.1715 20 4.51895V18Z"
+                      fill="white"
+                    />
+                    <g id="Fork">
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M6 0C6.55228 0 7 0.447715 7 1V29C7 29.5523 6.55228 30 6 30C5.44772 30 5 29.5523 5 29V1C5 0.447715 5.44772 0 6 0Z"
+                        fill="white"
+                      />
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M1.5 0C2.05228 0 2.5 0.447715 2.5 1V6.5C2.5 7.05686 2.69203 7.81518 3.20088 8.41656C3.68001 8.98281 4.51446 9.5 5.99993 9.5C6.55221 9.5 6.99993 9.94771 6.99993 10.5C6.99993 11.0523 6.55221 11.5 5.99993 11.5C3.98547 11.5 2.56995 10.7672 1.6741 9.70844C0.807973 8.68482 0.5 7.44314 0.5 6.5V1C0.5 0.447715 0.947715 0 1.5 0Z"
+                        fill="white"
+                      />
+                      <path
+                        fill-rule="evenodd"
+                        clip-rule="evenodd"
+                        d="M10.5 0C9.94771 0 9.5 0.447715 9.5 1V6.5C9.5 7.05686 9.30797 7.81518 8.79912 8.41656C8.31999 8.98281 7.4854 9.5 5.99993 9.5C5.44765 9.5 5.00007 9.94771 5.00007 10.5C5.00007 11.0523 5.44765 11.5 5.99993 11.5C8.01439 11.5 9.43005 10.7672 10.3259 9.70844C11.192 8.68482 11.5 7.44314 11.5 6.5V1C11.5 0.447715 11.0523 0 10.5 0Z"
+                        fill="white"
+                      />
+                    </g>
+                  </g>
+                </svg>
+              </div>
+              <p
+                class="work-principle-list__description description description--small"
+              >
                 Замените один-два приема обычной еды на наше функциональное
                 питание.
               </p>
@@ -247,7 +309,9 @@
               <div
                 class="work-principle-list__icon-container work-principle-list__icon-container--watch"
               ></div>
-              <p class="work-principle-list__description description">
+              <p
+                class="work-principle-list__description description description--small"
+              >
                 Уже через месяц наслаждайтесь изменениями к лучшему вашего
                 питомца!
               </p>
@@ -260,7 +324,7 @@
       <section class="example">
         <div class="example__wrapper container">
           <div class="example__description-container">
-            <h2 class="example__title title">Живой пример</h2>
+            <h2 class="example__title title title--medium">Живой пример</h2>
             <p class="example__text">
               Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм
               на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
