Приступил к стилизации блока "Живой пример" , начал верстать 2 блока с описанием

--- a/src/index.html
+++ b/src/index.html
@@ -325,7 +325,7 @@
         <div class="example__wrapper container">
           <div class="example__description-container">
             <h2 class="example__title title title--medium">Живой пример</h2>
-            <p class="example__text">
+            <p class="example__text description description--small">
               Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм
               на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
               При этом он не менял своих привычек и по-прежнему спит по 16 часов
@@ -334,12 +334,23 @@
 
             <dl class="example__list">
               <div class="example__item">
-                <dt class="example__heading">5 кг</dt>
-                <dd class="example__description">снижение веса</dd>
+                <dt class="example__heading title title--extra-small">5 кг</dt>
+                <dd
+                  class="example__description description description--extra-small"
+                >
+                  снижение<br />
+                  веса
+                </dd>
               </div>
               <div class="example__item">
-                <dt class="example__heading">60 дней</dt>
-                <dd class="example__description">затрачено времени</dd>
+                <dt class="example__heading title title--extra-small">
+                  60 дней
+                </dt>
+                <dd
+                  class="example__description description description--extra-small"
+                >
+                  затрачено времени
+                </dd>
               </div>
             </dl>
             <div class="example__result">
