Сделал стилизацию блока "Живой пример" для всех состояний

--- a/src/index.html
+++ b/src/index.html
@@ -332,47 +332,52 @@
               в день.
             </p>
 
-            <dl class="example__list">
-              <div class="example__item">
-                <dt class="example__heading title title--extra-small">5 кг</dt>
-                <dd
-                  class="example__description description description--extra-small"
-                >
-                  снижение<br />
-                  веса
-                </dd>
+            <div class="example__description-content">
+              <dl class="example__list">
+                <div class="example__item">
+                  <dt class="example__heading title title--extra-small">
+                    5 кг
+                  </dt>
+                  <dd
+                    class="example__description description description--extra-small"
+                  >
+                    снижение<br />
+                    веса
+                  </dd>
+                </div>
+                <div class="example__item">
+                  <dt class="example__heading title title--extra-small">
+                    60 дней
+                  </dt>
+                  <dd
+                    class="example__description description description--extra-small"
+                  >
+                    затрачено <br />
+                    времени
+                  </dd>
+                </div>
+              </dl>
+              <div class="example__result">
+                <p class="example__expenses">Затраты на питание:</p>
+                <div class="example__price">15 000 руб.</div>
               </div>
-              <div class="example__item">
-                <dt class="example__heading title title--extra-small">
-                  60 дней
-                </dt>
-                <dd
-                  class="example__description description description--extra-small"
-                >
-                  затрачено времени
-                </dd>
-              </div>
-            </dl>
-            <div class="example__result">
-              <p class="example__expenses">Затраты на питание:</p>
-              <div class="example__price">15 000 руб.</div>
             </div>
-          </div>
-          <div class="example__cat cat-result">
-            <img
-              class="cat-result__image"
-              src="./img/before-mobile.png"
-              width="280"
-              height="256"
-              alt="Кот до похудения"
-            />
-            <img
-              class="cat-result__image"
-              src="./img/after-mobile.png"
-              width="280"
-              height="256"
-              alt="Кот после похудения"
-            />
+            <div class="example__cat cat-result">
+              <img
+                class="cat-result__image"
+                src="./img/before-mobile.png"
+                width="280"
+                height="256"
+                alt="Кот до похудения"
+              />
+              <img
+                class="cat-result__image"
+                src="./img/after-mobile.png"
+                width="280"
+                height="256"
+                alt="Кот после похудения"
+              />
+            </div>
           </div>
         </div>
       </section>
