--- a/src/index.html
+++ b/src/index.html
@@ -383,11 +383,12 @@
       </section>
 
       <!-- Локация -->
-      <section class="location location">
+      <section class="location">
         <div class="location__wrapper container">
           <div class="location__address-wrapper location-address-wrapper">
             <h2 class="location__address-wrapper-title">
-              приглашаем к сотрудничеству дилеров!
+              Приглашаем к<br />
+              сотрудничеству дилеров!
             </h2>
             <address class="location__address">
               <p class="location__address-place">
@@ -398,13 +399,16 @@
           </div>
           <!-- здесь будет карта -->
           <div class="location__map map">
-            <img
-              class="map__image"
-              src="./img/map-mobile.png"
-              width="320"
-              height="362"
-              alt="карта"
-            />
+            <iframe
+              class="map__iframe"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8224469757427!2d30.314833977330657!3d59.968268659713594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1696326629910!5m2!1sru!2sru"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </div>
         </div>
       </section>
