--- a/src/form.html
+++ b/src/form.html
@@ -9,7 +9,9 @@
   <body>
     <!-- Шапка -->
     <header class="main-header">
-      <div class="main-header__wrapper container">
+      <div
+        class="main-header__wrapper main-header__wrapper--border-bottom container"
+      >
         <div class="main-header__container-nav">
           <a class="main-header__icon-logo" href="index.html">
             <img
